--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,12 +17,27 @@
         android:textColor="@android:color/holo_orange_light"
         android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/song_artist"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Artist"
-        android:textColor="@android:color/holo_orange_light"
-        android:textSize="18sp" />
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/song_album"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Album"
+            android:textColor="@android:color/holo_orange_light"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/song_artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Artist"
+            android:textColor="@android:color/holo_orange_light"
+            android:textSize="18sp" />
+    </LinearLayout>
+
 </LinearLayout>
